--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = None\n",
+    "la-boca"
    ]
   },
   {
