Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -366,12 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to operator (<ipython-input-11-6b59cf97f617>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-6b59cf97f617>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    la-boca_marker = [-1]\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+     ]
+    }
+   ],
    "source": [
     "la_boca_marker = None\n",
-    "la-boca_marker = "
+    "la-boca_marker = [-1]"
    ]
   },
   {
