Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -366,21 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-12-4bcb91db5b98>, line 2)",
+     "evalue": "can't assign to operator (<ipython-input-13-b8143ed52ad9>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-4bcb91db5b98>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    la-boca_marker = -1\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-b8143ed52ad9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    la-boca_marker = marker_six\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
      ]
     }
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la-boca_marker = -1"
+    "la-boca_marker = marker_six"
    ]
   },
   {
