--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la-boca_marker = "
+    "la-boca_marker == marker_"
    ]
   },
   {
