--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker == marker_six"
+    "la_boca_marker = "
    ]
   },
   {
