--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker = V"
+    "la_boca_marker = -34.603722,  -58.381592"
    ]
   },
   {
