--- a/index.ipynb
+++ b/index.ipynb
@@ -371,6 +371,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
+    "marker\n",
     "la_boca_marker = -34.603722,  -58.381592"
    ]
   },
