Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,8 +371,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "marker_six = la_boca_marker\n",
-    "la_boca_marker = -34.603722,  -58.381592"
+    "marker_six = la_boca_marker\n"
    ]
   },
   {
