--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = ma\n",
+    "la_boca_marker = \n",
     "marker_six = la_boca_marker\n"
    ]
   },
