Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhood market\n",
+    "la_boca_marker = neighborhood markers[-1]\n",
     "marker_six = la_boca_marker\n"
    ]
   },
