--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
     }
    ],
    "source": [
-    "la_boca_marker = neighborhood markers[-1]\n",
+    "la_boca_marker =\n",
     "la_boca_marker\n"
    ]
   },
