--- a/index.ipynb
+++ b/index.ipynb
@@ -379,8 +379,8 @@
     }
    ],
    "source": [
-    "la_boca_marker =\n",
-    "la_boca_marker\n"
+    "la_boca_marker\n",
+    "\n"
    ]
   },
   {
