Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la_loca_marker[-1]\n",
+    "la_loca_marker[-\n",
     "\n"
    ]
   },
