--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,7 @@
    ],
    "source": [
     "import folium\n",
-    "buenos_map = folium.Map([ba_latitude, ba_longitude])\n",
-    "buenos_map"
+    "buenos_map = folium.Map([ba_latitude, ba_longitude])\n"
    ]
   },
   {
