--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -227,10 +227,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fbdc8457c18>"
+       "<folium.map.Marker at 0x7fbdc83aaf28>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
