Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "la_loca_marker = marker_six\n",
+    "la_loca_marker = \n",
     "\n"
    ]
   },
