--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,8 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "la_loca_marker = \n",
+    "la_loca_marker = [la_loca_marker]\n",
+    "\n",
     "\n"
    ]
   },
