--- a/index.ipynb
+++ b/index.ipynb
@@ -390,6 +390,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
+    "la_boca_marker \n",
     "la_loca_marker = [la_loca_marker]\n",
     "la_loca_marker[-1]\n",
     "\n"
