Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    "source": [
     "la_boca_marker = None\n",
     "la_boca_marker [-1]\n",
-    "\n",
+    "la_boca_marke\n",
     "la_loca_marker = [la_loca_marker]\n",
     "la_loca_marker[-1]\n",
     "\n"
