--- a/index.ipynb
+++ b/index.ipynb
@@ -372,7 +372,7 @@
     "marker_three = folium.Marker([-34.6212, -58.3731])\n",
     "marker_four = folium.Marker([-34.6177, -58.3621])\n",
     "marker_five = folium.Marker([-34.603722,  -58.381592])\n",
-    "marker_six = folium.Marker([C])\n",
+    "marker_six = folium.Marker([-])\n",
     "neighborhood_markers = [marker_one, marker_two, marker_three, marker_four, marker_five, marker_six]"
    ]
   },
