--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,7 @@
    ],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker [-1]\n",
+    "la_boca_marker [-\n",
     "la_boca_marker"
    ]
   },
