--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(neighborhood_markers)) # \n",
+    "print(len(neighborhood_markers)) # 6\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
    ]
   },
