Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,12 +481,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "recoleta_marker = None\n",
-    "recoleta = marker_"
+    "recoleta = marker_two"
    ]
   },
   {
