Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
     }
    ],
    "source": [
-    "buenos_\n",
+    "buenos_map = folium.Map()\n",
     "recoleta_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
