--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
     }
    ],
    "source": [
-    "buenos_map = folium.Map([-34.6037, -58.3816])\n",
+    "buenos_map = folium.Map([-34.6037, -58.3816], zoom_start )\n",
     "recoleta_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
